cluster/apps/jellyfin/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: media-server
  labels:
    app.kubernetes.io/name: jellyfin
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: jellyfin
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jellyfin
    spec:
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      securityContext:
        runAsUser: 108096
        runAsGroup: 109030
      containers:
        - name: jellyfin
          image: "docker.io/jellyfin/jellyfin:10.8.4"
          imagePullPolicy: IfNotPresent
          ports:
            - name: jellyfin-http
              containerPort: 8096
              protocol: TCP
          volumeMounts:
            - name: ca-certificate
              mountPath: /etc/ssl/certs/HomeLab_Internal_Root_CA.pem
              subPath: root-cert.pem
            - name: jellyfin-data
              mountPath: /config
            - name: media
              mountPath: /media
          livenessProbe:
            exec:
              command:
                - /bin/bash
                - -c
                - test "$(curl http://localhost:8096/health)" = "Healthy"
            initialDelaySeconds: 60
            timeoutSeconds: 10
            periodSeconds: 10
            failureThreshold: 5
            successThreshold: 1
          readinessProbe:
            tcpSocket:
              port: 8096
            initialDelaySeconds: 0
            timeoutSeconds: 1
            periodSeconds: 10
            failureThreshold: 3
          startupProbe:
            tcpSocket:
              port: 8096
            initialDelaySeconds: 0
            timeoutSeconds: 1
            periodSeconds: 5
            failureThreshold: 30
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
      volumes:
        - name: ca-certificate
          configMap:
            name: homelab.internal
        - name: jellyfin-config
          configMap:
            name: jellyfin-config
            defaultMode: 0777
        - name: jellyfin-data
          persistentVolumeClaim:
            claimName: jellyfin-data
        - name: jellyfin-secrets
          secret:
            secretName: jellyfin-secrets
        - name: media
          nfs:
            server: 192.168.1.10
            path: /mnt/storage/mediasrv
